--- a/css/style.css
+++ b/css/style.css
@@ -610,3 +610,32 @@
 .modal-footer {
     border-top: 1px solid #ddd;
 }
+
+
+
+.contact-buttons {
+    margin-top: 20px;
+    width: 40%;
+    display: flex;
+    justify-content: center; 
+    gap: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.contact-buttons .button {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    /* color: #fff; */
+    /* background-color: var(--primary); */
+    /* border: none; */
+    /* border-radius: 5px; */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.contact-buttons .button:hover {
+    background-color: #8c5e32; /* Darker shade on hover */
+}
+.contact-buttons .button:active {
+    background-color: #7a4f2a; /* Even darker shade on click */
+}
