--- a/css/style.css
+++ b/css/style.css
@@ -663,6 +663,7 @@
 @media screen and (max-width: 480px) {
     .contact-buttons {
         width: 90%; /* Take almost full width on very small screens */
+        height: 100px;
     }
 
     .contact-buttons .button {
